# dev-workflow

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
agents/: base.py  claude.py  codex.py
codeagent-wrapper/: CLAUDE.md  backend.go  backend_test.go  config.go  executor.go  main.go  main_schema_test.go  main_test.go  mock.go  schema.go  schema_test.go
dev-workflow/: SKILL.md
dev-workflow-init/: SKILL.md
doc/: agentflow-primitive-refinement-preview.md  agentflow-runtime-design.md  agentflow-runtime-development-plan.md
docs/: agentflow-kernel-design.md  agentflow-multi-agent-framework-thoughts.md  agentflow-primitive-basis.md  agentflow-primitive-refinement-preview.html  agentflow-primitive-refinement-preview.md  agentflow-primitives-runtime-detailed-design.md  agentflow-six-primitives-usable-design.md  agentflow-six-primitives.html  agentflow-six-primitives.md  claude-code-dynamic-workflow.md  dynamic-workflow-direction.md  m12-development-tasks.md  m12-progress-evaluation.md  m13-real-planner-plan.md  roadmap.md
fixtures/: README.md
monorepo/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
schemas/: README.md  finish-output.json  implement-output.json  review-output.json
scripts/: config.py  engine.py  models.py  orchestrator.py  stage_runner.py
src/cli/: index.ts
stages/: __init__.py  base.py  blackbox_test.py  bootstrap.py  implement.py  review.py  whitebox_test.py
templates/: blackbox-test-prompt.md  finish-prompt.md  implement-prompt.md  (+1 more)
(+164 files in other folders)
